--- a/docs/docker-compose.yml
+++ b/docs/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   openvpn:
     cap_add:
      - NET_ADMIN
-    image: awalach/openvpn
+    image: mksolutions/openvpn
     container_name: openvpn
     ports:
      - "1194:1194/udp"
@@ -11,7 +11,7 @@ services:
     depends_on:
       - "gui"
     volumes:
-     - ./openvpn-data/conf:/etc/openvpn
+     - /openvpn/conf:/etc/openvpn
   gui:
     image: awalach/openvpn-web-ui
     container_name: openvpn-gui
@@ -19,5 +19,5 @@ services:
      - "8080:8080/tcp"
     restart: always
     volumes:
-     - ./openvpn-data/conf:/etc/openvpn
-     - ./openvpn-data/db:/opt/openvpn-gui/db
+     - /openvpn/conf:/etc/openvpn
+     - /openvpn/db:/opt/openvpn-gui/db
